--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ section{
 	font-family:'Signika', sans-serif;
 	height:40vh;
 	font-size:48px;
-	padding:50px 0;
+	padding:40px 0 30px 0;
 	text-align:center;
 }
 .my-design-areas{
